# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.3.3 (git revision xxx)
==============================================

Small features:
  * New starpu_task_insert() parameter STARPU_TASK_WORKERIDS allowing
    to set the fields starpu_task::workerids_len and
    starpu_task::workerids

StarPU 1.3.2 (git revision af22a20fc00a37addf3cc6506305f89feed940b0)
==============================================

Small changes:
  * Improve OpenMP support to detect the environment is valid before
    launching OpenMP
  * Delete old code (drivers gordon, scc, starpu-top, and plugin gcc)
    and update authors file accordingly
  * Add Heteroprio documentation (including a simple example)
  * Add a progression hook, to be called when workers are idle, which
    is used in the NewMadeleine implementation of StarPU-MPI to ensure
    communications progress.

StarPU 1.3.1 (git revision 01949488b4f8e6fe26d2c200293b8aae5876b038)
==============================================

Small features:
  * Add starpu_filter_nparts_compute_chunk_size_and_offset helper.
  * Add starpu_bcsr_filter_canonical_block_child_ops.

Small changes:
  * Improve detection of NVML availability. Do not only check the
    library is available, also check the compiled code can be run.

StarPU 1.3.0 (git revision 24ca83c6dbb102e1cfc41db3bb21c49662067062)
==============================================

New features:
  * New scheduler 'heteroprio' with heterogeneous priorities
  * Support priorities for data transfers.
  * Add support for multiple linear regression performance models
    - Bump performance model file format version to 45.
  * Add MPI Master-Slave support to use the cores of remote nodes. Use the
    --enable-mpi-master-slave option to activate it.
  * Add STARPU_CUDA_THREAD_PER_DEV environment variable to support driving all
    GPUs from only one thread when almost all kernels are asynchronous.